logo spacing fixed

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 .logo{
-    margin-left: -20px;
+    margin-left: -40px;
 }
 
 .top-bar-right-class{
